[package]
name = "ayz"
version = "0.1.0"
authors = ["kawakami <kawakami.ozone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "room"
path = "src/test_room.rs"

[[bin]]
name = "aisle"
path = "src/test_aisle.rs"

[dependencies]
rand = "0.8.2"
termion = "*"

