[package]
name = "ayz"
version = "0.1.0"
authors = ["kawakami <kawakami.ozone@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "room"
path = "src/test_room.rs"

[[bin]]
name = "aisle"
path = "src/test_aisle.rs"

[[bin]]
name = "map"
path = "src/test_map.rs"

[dependencies]
rand = "0.8"
crossterm = "0.28"

